--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -116,22 +116,23 @@
 \newcommand{\CF}{{\it cf.}\xspace}
 \newcommand{\IID}{i.i.d.\xspace}
 
-\newcommand{\R}{\texttt{R}\xspace}
-\newcommand{\TESS}{\texttt{TESS}\xspace}
-\newcommand{\PBD}{\texttt{PBD}\xspace}
-\newcommand{\DDD}{\texttt{DDD}\xspace}
-\newcommand{\Laser}{\texttt{laser}\xspace}
-\newcommand{\TreePar}{\texttt{TreePar}\xspace}
-\newcommand{\diversitree}{\texttt{diversitree}\xspace}
-\newcommand{\RevBayes}{\texttt{RevBayes}\xspace}
-\newcommand{\Rev}{\texttt{Rev}\xspace}
-\newcommand{\MrBayes}{\texttt{MrBayes}\xspace}
-\newcommand{\BEAST}{\texttt{BEAST}\xspace}
-\newcommand{\PhyloBayes}{\texttt{PhyloBayes}\xspace}
-\newcommand{\PAML}{\texttt{PAML}\xspace}
-\newcommand{\Phylowood}{\texttt{Phylowood}\xspace}
-\newcommand{\Tracer}{\texttt{Tracer}\xspace}
 \newcommand{\BAMM}{\texttt{BAMM}\xspace}
+\newcommand{\BEAST}{\texttt{BEAST}\xspace}
+\newcommand{\DDD}{\texttt{DDD}\xspace}
+\newcommand{\diversitree}{\texttt{diversitree}\xspace}
+\newcommand{\FigTree}{\texttt{FigTree}\xspace}
+\newcommand{\Laser}{\texttt{laser}\xspace}
+\newcommand{\MrBayes}{\texttt{MrBayes}\xspace}
+\newcommand{\PAML}{\texttt{PAML}\xspace}
+\newcommand{\PBD}{\texttt{PBD}\xspace}
+\newcommand{\PhyloBayes}{\texttt{PhyloBayes}\xspace}
+\newcommand{\Phylowood}{\texttt{Phylowood}\xspace}
+\newcommand{\R}{\texttt{R}\xspace}
+\newcommand{\Rev}{\texttt{Rev}\xspace}
+\newcommand{\RevBayes}{\texttt{RevBayes}\xspace}
+\newcommand{\TESS}{\texttt{TESS}\xspace}
+\newcommand{\Tracer}{\texttt{Tracer}\xspace}
+\newcommand{\TreePar}{\texttt{TreePar}\xspace}
 
 
 \let\otheriint\iint
