--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -120,10 +120,6 @@ John P. Huelsenbeck
 \def \ResourcePath {RB_DiversificationRateIntro_Tutorial/}
 \include{RB_DiversificationRateIntro_Tutorial/RB_DiversificationRateIntro_Tutorial_content}
 
-%\chapter{Estimating species tree using gene concatenation}
-%\def \ResourcePath {RB_GeneConcatenation_Tutorial/}
-%\include{RB_GeneConcatenation_Tutorial/RB_GeneConcatenation_Tutorial_content}
-
 \chapter{Basic Diversification Rate Estimation}
 \def \ResourcePath {RB_DiversificationRate_Tutorial/}
 \include{RB_DiversificationRate_Tutorial/RB_DiversificationRate_Tutorial_content}
@@ -131,6 +127,10 @@ John P. Huelsenbeck
 \chapter{Episodic Diversification Rate Estimation}
 \def \ResourcePath {RB_DiversificationRateEpisodic_Tutorial/}
 \include{RB_DiversificationRateEpisodic_Tutorial/RB_DiversificationRateEpisodic_Tutorial_content}
+
+\chapter{Branch-Specific Diversification Rate Estimation}
+\def \ResourcePath {RB_DiversificationRateBranchSpecific_Tutorial/}
+\include{RB_DiversificationRateBranchSpecific_Tutorial/RB_DiversificationRateBranchSpecific_Tutorial_content}
 
 
 
