--- a/tutorial_TeX/RB_DiversificationRateBranchSpecific_Tutorial/RB_DiversificationRateBranchSpecific_Tutorial_content.tex
+++ b/tutorial_TeX/RB_DiversificationRateBranchSpecific_Tutorial/RB_DiversificationRateBranchSpecific_Tutorial_content.tex
@@ -121,7 +121,7 @@ Using this variable we can easily change our script to use more or fewer categor
 \begin{figure}[htbp!]
 \centering
 \fbox{\includegraphics[width=\textwidth]{\ResourcePath figures/discretized_lognormal.pdf}}
-\caption{\small Discretization of a lognormal distribution. The two left figures have 4 rate categories and the two right plots have 10 rate categories. The top plots have the 95\% probability interval spanning one order of magnitude (\cl{sd} $=0.587405$) and the bottom plots have the 95\% probability interval spanning two orders of magnitude (\cl{sd} $=2*0.587405$)}}
+\caption{\small Discretization of a lognormal distribution. The two left figures have 4 rate categories and the two right plots have 10 rate categories. The top plots have the 95\% probability interval spanning one order of magnitude (\cl{sd} $=0.587405$) and the bottom plots have the 95\% probability interval spanning two orders of magnitude (\cl{sd} $=2*0.587405$)}
 \label{fig:BSBD_likelihood}
 \end{figure}
 Instead of using a continuous probability distribution we will use a discrete approximation of the distribution, as done for modeling rate variation across sites \citep{Yang1994a} and for modeling relaxed molecular clocks \citep{Drummond2006}.
