--- a/tutorial_TeX/RB_DiversificationRateEpisodic_Tutorial/RB_DiversificationRateEpisodic_Tutorial_content.tex
+++ b/tutorial_TeX/RB_DiversificationRateEpisodic_Tutorial/RB_DiversificationRateEpisodic_Tutorial_content.tex
@@ -206,11 +206,11 @@ interval_times = T.rootAge() * (1:NUM_INTERVALS) / (NUM_INTERVALS) * 0.8
 
 \subsubsection{Incomplete Taxon Sampling}
 
-We know that we have sampled 369 out of 450 living primate species. 
+We know that we have sampled 367 out of 450 living primate species. 
 To account for this we can set the sampling parameter as a constant node with a value of 369/450
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-rho <- 369/450
+rho <- T.ntips()/450
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -245,7 +245,7 @@ timetree.clamp(T)
 Finally, we create a workspace object of our whole model using the \cl{model()} function. 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-mymodel = model(birth_rate)
+mymodel = model(speciation)
 \end{lstlisting}
 \end{snugshade*}}
 
