--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -96,15 +96,23 @@ John P. Huelsenbeck
 
 
 
-\part{Dating}
+\part{Divergence Time Estimation}
 
-\chapter{A Brief Introduction, Overview and Example of Dating, Calibration and Relaxed Clocks}
-\def \ResourcePath {RB_Dating_Tutorial/}
-\include{RB_Dating_Tutorial/RB_Dating_Tutorial_content}
+%\chapter{A Brief Introduction, Overview and Example of Dating, Calibration and Relaxed Clocks}
+%\def \ResourcePath {RB_Dating_Tutorial/}
+%\include{RB_Dating_Tutorial/RB_Dating_Tutorial_content}
 
-\chapter{Divergence Time Estimation}
+\chapter{Overview}
 \def \ResourcePath {RB_DivergenceTime_Tutorial/}
 \include{RB_DivergenceTime_Tutorial/RB_DivergenceTime_Tutorial_content}
+
+\chapter{Node and Fossil Calibration}
+\def \ResourcePath {RB_DivergenceTimeCalibration_Tutorial/}
+\include{RB_DivergenceTimeCalibration_Tutorial/RB_DivergenceTimeCalibration_Tutorial_content}
+
+\chapter{Relaxed Clocks}
+\def \ResourcePath {RB_DivergenceTimeRelaxedClock_Tutorial/}
+\include{RB_DivergenceTimeRelaxedClock_Tutorial/RB_DivergenceTimeRelaxedClock_Tutorial_content}
 
 %\chapter{Node Calibration}
 %\def \ResourcePath {RB_NodeCalibration_Tutorial/}
