updating basics tutorial

--- a/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial_content.tex
+++ b/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial_content.tex
@@ -4,7 +4,7 @@
 
 This tutorial demonstrates the basic syntactical features of \RevBayes and \Rev and shows how to set up and perform an analysis on ``toy'' statistical models for linear regression. 
 This tutorial focuses on explaining probabilistic graphical models and the language \Rev.
-A good reference for probabilistic graphical models for Bayesian phylogenetic inference is given in \cite{Hohna2014b}.
+A good reference for probabilistic graphical models for Bayesian phylogenetic inference is given in \cite{Hoehna2014b}.
 The statistical examples are borrowed from a fourth year statistics course taught in the fall term 2011 at Stockholm University.
 
 The first section of this tutorial involves 
@@ -880,5 +880,4 @@ You can carry out these batch commands by providing the file name when you execu
 
 
 \bibliographystyle{sysbio}
-\bibliography{\ResourcePath refs}
-
+\bibliography{\GlobalResourcePath refs}
