--- a/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
+++ b/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
@@ -37,9 +37,9 @@ In the \cl{data} folder, you will find the following files
 
 \section{Introduction}
 
-For most sequence alignments, several (possibly many) substitution models of varying complexity are plausible {\it a priori}.
+For most sequence alignments, several (possibly many) substitution models of varying complexity are plausible \emph{a priori}.
 We therefore need a way to objectively identify the model that balances estimation bias and inflated error variance associated with under- and over-parameterized models, respectively.
-Increasingly, model selection is based on \textit{Bayes factors} \citep[{\it e.g.},][]{Suchard2001,Lartillot2006,Xie2011,Baele2012,Baele2013}, which involves first calculating the marginal likelihood of each candidate model and then comparing the ratio of the marginal likelihoods for the set of candidate models.
+Increasingly, model selection is based on \emph{Bayes factors} \citep[\EG][]{Suchard2001,Lartillot2006,Xie2011,Baele2012,Baele2013}, which involves first calculating the marginal likelihood of each candidate model and then comparing the ratio of the marginal likelihoods for the set of candidate models.
 
  
 Given two models, $M_0$ and $M_1$, the Bayes-factor comparison assessing the relative fit of each model to the data, $BF(M_0,M_1)$, is:
@@ -102,11 +102,11 @@ using both the stepping-stone \citep{Xie2011,Fan2011} and path sampling estimato
 The models we use here are equivalent to the models described in the previous exercise on substitution models (continuous time Markov models).
 To specify the model please consult the previous exercise. Specifically, you will need to specify the following substitution models:
 \begin{itemize}
-\item Jukes-Cantor (JC) substitution model \citep[][]{Jukes1969}
-\item Hasegawa-Kishino-Yano (HKY) substitution model \citep[][]{Hasegawa1985}
-\item General-Time-Reversible (GTR) substitution model \citep[][]{Tavare1986}
-\item Gamma (+G) model for among-site rate variation \citep[][]{yang94a}
-\item Invariable-sites (+I) model \citep[][]{Hasegawa1985}
+\item Jukes-Cantor (JC) substitution model \citep{Jukes1969}
+\item Hasegawa-Kishino-Yano (HKY) substitution model \citep{Hasegawa1985}
+\item General-Time-Reversible (GTR) substitution model \citep{Tavare1986}
+\item Gamma (+G) model for among-site rate variation \citep{Yang1994a}
+\item Invariable-sites (+I) model \citep{Hasegawa1985}
 \end{itemize}
 
 
@@ -120,7 +120,7 @@ The basic idea is to estimate the probability of the data for all points between
 Technically, the steps correspond to a series of \cl{powerPosteriors()}: a series of numbers between 1 and 0 that are iteratively applied to the posterior.
 When the posterior probability is raised to the power of 1 (typically the first stepping stone), samples are drawn from the (untransformed) posterior.
 By contrast, when the posterior probability is raised to the power of 0 (typically the last stepping stone), samples are drawn from the prior.
-To perform a stepping-stone simulation, we need to specify (1) the \emph{number} of stepping stones (power posteriors) that we will use to traverse the path between the posterior and the prior (e.g., we specify 50 or 100 stones), (2) the \emph{spacing} of the stones between the posterior and prior (e.g., we may specify that the stones are distributed according to a beta distribution), (3) the number of samples to (and thinning) of samples to be drawn from each stepping stone, and (4) the direction we will take (i.e., from the posterior to the prior or vice versa).
+To perform a stepping-stone simulation, we need to specify (1) the number of stepping stones (power posteriors) that we will use to traverse the path between the posterior and the prior (\EG we specify 50 or 100 stones), (2) the spacing of the stones between the posterior and prior (\EG we may specify that the stones are distributed according to a beta distribution), (3) the number of samples to (and thinning) of samples to be drawn from each stepping stone, and (4) the direction we will take (\IE from the posterior to the prior or vice versa).
 
 
 
@@ -131,19 +131,13 @@ To perform a stepping-stone simulation, we need to specify (1) the \emph{number}
 Estimating the marginal likelihood involves integrating the likelihood of the data over the entire prior probability density for the model parameters.
 MCMC algorithms target the posterior probability density, which is typically concentrated in a small region of the prior probability density (A).
 Accordingly, standard MCMC simulation cannot provide unbiased estimates of the marginal likelihood because it will typically fail to explore most of the prior density.
-%Consequently, these marginal likelihood estimates will be biased. 
-(B) Stepping-stone algorithms estimate the marginal likelihood by means of a series of MCMC-like simulations, where the likelihood is iterativey raised to a series of powers, effectivey forcing the simulation to more fully explore the prior density of the model parameters.
+(B) Stepping-stone algorithms estimate the marginal likelihood by means of a series of MCMC-like simulations, where the likelihood is iteratively raised to a series of powers, effectively forcing the simulation to more fully explore the prior density of the model parameters.
 Here, six uniformly spaced stones span the posterior, where the power posterior is $\beta=6/6=1$, to the prior, where the power posterior is $\beta=0/6=0$.}
 \label{fig:jc}
 \end{figure}
 
 
-%With a fully specified model, we can set up the \cl{powerPosterior()} analysis to create a file of `powers' and likelihoods from which we can estimate the marginal likelihood using stepping-stone or path sampling. 
 This method computes a vector of powers from a beta distribution, then executes an MCMC run for each power step while raising the likelihood to that power. In this implementation, the vector of powers starts with 1, sampling the likelihood close to the posterior and incrementally sampling closer and closer to the prior as the power decreases. 
-
-
-
-%\textbf{\textit{Clear Workspace and Load the Data and Model}}
 
 Just to be safe, it is better to clear the workspace (if you did not just restart \RevBayes)
 {\tt \begin{snugshade*}
@@ -262,54 +256,11 @@ GTR+I ($M_5$) & \hspace{3mm} & \TextField[name=gene1_m51,backgroundcolor={.85 .8
 \hline
 GTR+$\Gamma$+I ($M_6$) & \hspace{3mm} & \TextField[name=gene1_m61,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene1_m62,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
 \hline
-Any other model ($M_7$) & \hspace{3mm} & \TextField[name=gene1_m71,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene1_m72,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-Any other model ($M_8$) & \hspace{3mm} & \TextField[name=gene1_m81,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene1_m82,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-Any other model ($M_9$) & \hspace{3mm} & \TextField[name=gene1_m91,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene1_m92,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
 {\footnotesize{$^*$you can edit this table}}\\
 \end{tabular}
 \label{tab:ml_cytb}
 \end{table}
 \end{Form}
-
-
-%\begin{Form}
-%\begin{table}[h]
-%\centering
-%\caption{\small Estimated marginal likelihoods for different substitution models of the cox2 gene$^*$.}
-%\begin{tabular}{l c c c c}
-%\hline
-%\multicolumn{1}{l}{\textbf{ }} &\multicolumn{1}{r}{\textbf{ }} & \multicolumn{3}{c}{\textbf{Marginal lnL estimates}} \\ 
-%\cline{3-5}
-%\multicolumn{1}{l}{\textbf{Substitution Model}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textit{Stepping-stone}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textit{Path sampling}} \\ 
-%\hline
-%JC ($M_1$) & \hspace{15mm} & \TextField[name=gene2_m11,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \hspace{15mm} & \TextField[name=gene2_m12,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-%\hline
-%HKY ($M_2$) & \hspace{3mm} &\TextField[name=gene2_m21,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}   & \hspace{3mm} & \TextField[name=gene2_m22,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-%\hline
-%GTR ($M_3$) & \hspace{3mm} &\TextField[name=gene2_m31,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}   & \hspace{3mm} & \TextField[name=gene2_m32,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-%\hline
-%GTR+$\Gamma$ ($M_4$) & \hspace{3mm} & \TextField[name=gene2_m41,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m42,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-%\hline
-%GTR+I ($M_5$) & \hspace{3mm} & \TextField[name=gene2_m51,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m52,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-%\hline
-%GTR+$\Gamma$+I ($M_6$) & \hspace{3mm} & \TextField[name=gene2_m61,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m62,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-%\hline
-%Any other model ($M_7$) & \hspace{3mm} & \TextField[name=gene2_m71,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m72,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-%\hline
-%Any other model ($M_8$) & \hspace{3mm} & \TextField[name=gene2_m81,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m82,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-%\hline
-%Any other model ($M_9$) & \hspace{3mm} & \TextField[name=gene2_m91,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{} & \hspace{3mm} & \TextField[name=gene2_m92,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-%\hline
-%{\footnotesize{$^*$you can edit this table}}\\
-%\end{tabular}
-%\label{tab:ml_cox2}
-%\end{table}
-%\end{Form}
-
-
 
 
 
@@ -345,27 +296,21 @@ Enter your answers in Table \ref{bfTable} using the stepping-stone and the path-
 \centering
 \caption{\small Bayes factor calculation$^*$.}
 \resizebox{\textwidth}{!}{%  
-\begin{tabular}{l c c c c c c c c c}
+\begin{tabular}{l c c c c c c}
 \hline
-\textbf{Model comparison} & $M_1$ & $M_2$ & $M_3$ & $M_4$ & $M_5$ & $M_6$ & $M_7$ & $M_8$ & $M_9$ \\ 
+\textbf{Model comparison} & $M_1$ & $M_2$ & $M_3$ & $M_4$ & $M_5$ & $M_6$  \\ 
 \hline
-$M_1$ & - & \TextField[name=bf12,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf13,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf14,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf15,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf16,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf17,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf18,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf19,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+$M_1$ & - & \TextField[name=bf12,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf13,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf14,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf15,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf16,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
 \hline
-$M_2$ & \TextField[name=bf21,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & - & \TextField[name=bf23,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf24,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf25,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf26,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf27,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf28,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf29,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+$M_2$ & \TextField[name=bf21,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & - & \TextField[name=bf23,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf24,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf25,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf26,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  \\
 \hline
-$M_3$ & \TextField[name=bf31,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \TextField[name=bf32,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & -  & \TextField[name=bf34,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf35,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf36,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf37,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf38,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf39,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+$M_3$ & \TextField[name=bf31,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \TextField[name=bf32,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & -  & \TextField[name=bf34,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf35,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf36,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  \\
 \hline
-$M_4$ & \TextField[name=bf41,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \TextField[name=bf42,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf43,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  &-  & \TextField[name=bf45,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf46,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf47,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf48,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf49,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+$M_4$ & \TextField[name=bf41,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \TextField[name=bf42,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf43,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  &-  & \TextField[name=bf45,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf46,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  \\
 \hline
-$M_5$ & \TextField[name=bf51,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \TextField[name=bf52,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf53,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf54,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & -  & \TextField[name=bf56,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf57,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf58,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf59,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
+$M_5$ & \TextField[name=bf51,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \TextField[name=bf52,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf53,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf54,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & -  & \TextField[name=bf56,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  \\
 \hline
-$M_6$ & \TextField[name=bf61,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \TextField[name=bf62,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf63,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf64,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf65,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & - & \TextField[name=bf67,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf68,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf69,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-$M_7$ & \TextField[name=bf71,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \TextField[name=bf72,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf73,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf74,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf75,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf76,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  &-  & \TextField[name=bf78,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf79,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-$M_8$ & \TextField[name=bf81,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \TextField[name=bf82,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf83,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf84,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf85,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf86,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf87,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & - & \TextField[name=bf89,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{} \\
-\hline
-$M_9$ & \TextField[name=bf91,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \TextField[name=bf92,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf93,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf94,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf95,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf96,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf97,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf98,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & - \\
+$M_6$ & \TextField[name=bf61,backgroundcolor={.85 .85 .85},color={1 0 0},height=4ex]{}  & \TextField[name=bf62,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf63,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf64,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & \TextField[name=bf65,backgroundcolor={.85 .85 .85},color={0 0 1},height=4ex]{}  & - \\
 \hline
 {\footnotesize{$^*$you can edit this table}}\\
 \end{tabular}}
@@ -381,8 +326,6 @@ In this tutorial you have learned how to use \RevBayes~to assess the \emph{relat
 Typically, once we have identified the ``best'' substitution model for our alignment, we would then proceed to use this model for inference.
 Technically, this is a decision to condition our inferences on the selected model, which explicitly assumes that it provides a reasonable description of the process that gave rise to our data.
 However, there are several additional issues to consider before proceeding along these lines, which we briefly mention below.
-%considerations cases where conditioning on the preferred model may be problematic.
-%On possible scenario is related to uncertainty in the choice of substitution model, and the other is related to the \emph{absolute} fit of the chosen model to our data. 
 
 \subsection{Accommodating Process Heterogeneity}
 In the analyses that we performed in this tutorial, we assumed that all sites in an alignment evolved under an identical substitution process.
@@ -391,7 +334,7 @@ Various aspects of the substitution process---the stationary frequencies, exchan
 For example, the nature of the substitution process may vary between codon positions of protein-coding genes, between stem and loop regions of ribosomal genes, or between different gene and/or genomic regions. 
 It is equally well established that failure to accommodate this \textit{process heterogeneity}---variation in the nature of the substitution process across the alignment---will cause biased estimates of the tree topology, branch lengths and other phylogenetic model parameters.
 We can accommodate process heterogeneity by adopting a \emph{mixed-model} approach, where two or more subsets of sites are allowed to evolve under distinct substitution processes.
-We will demonstrate how to specify---and select among---alternative mixed models using \RevBayes~in a separate tutorial, RB\_PartitionedData\_Tutorial.
+We will demonstrate how to specify---and select among---alternative mixed models using \RevBayes in a separate tutorial, RB\_PartitionedData\_Tutorial.
 
 \subsection{Assessing Model Adequacy}
 In this tutorial, we used Bayes factors to assess the fit of various substitution models to our sequence data, effectively establishing the \emph{relative} rank of the candidate models.
@@ -399,93 +342,17 @@ Even if we have successfully identified the very best model from the pool of can
 For this reason, it is important to consider \emph{model adequacy}: whether a given model provides a reasonable description of the process that gave rise to our sequence data. 
 We can assess the absolute fit of a model to a given dataset using \emph{posterior predictive simulation}.
 This approach is based on the following premise: if the candidate model provides a reasonable description of the process that gave rise to our dataset, then we should be able to generate data under this model that resemble our observed data.
-%should be able to , where we assess the ability of the candidate model to predict datasets that are similar to our observed data. 
-We will demonstrate how to assess model adequacy using \RevBayes~in a separate tutorial, RB\_ModelAdequacy\_Tutorial.
+We will demonstrate how to assess model adequacy using \RevBayes in a separate tutorial, RB\_ModelAdequacy\_Tutorial.
 
 \subsection{Accommodating Model Uncertainty}
-Even when we have carefully assessed the relative and absolute fit of candidate models to our dataset, it may nevertheless be unwise to condition our inference on the best model.%correctly ranked the relative fit of a pool of candidate models to our dataset, and assessed adequacy of the best model, 
-Imagine, for example, that there are several (possibly many) alternative models that provide a similarly good fit to our given dataset.%This is apt to become increasingly plausible as the size of the candidate model pool continues to grow.%[Consider, for example, that there are 203 members of GTR substitution model family.]   In such scenarios, conditioning inference on \textit{any} single model (even the `best') ignores uncertainty in the chosen model, which will cause estimates to be biased.This is the issue of \emph{model uncertainty}.
-%Model uncertainty can be addressed by means of \textit{model averaging}---parameters are estimated under each of the candidate models, and then summarized as the weighted average over the candidate models, where the weighting is based on the probability of each candidate model.The Bayesian framework provides a natural approach for accommodating model uncertainty by means of \textit{model averaging}; we simply adopt the perspective that models (like standard parameters) are random variables, and integrate the inference over the distribution of candidate models.We will demonstrate how to accommodate model uncertainty using \RevBayes~in a separate tutorial, RB\_ModelAveraging\_Tutorial.
-%If the fit of the data to the best model is substantially better than the fit to the other models, conditioning on the best model (i.e., making it a fixed assumption of the analysis) may be justifiable. 
-%Conversely, if the fit of the data to the best model is only marginally better than the fit to the other models, model averaging may be necessary. 
-%The Bayesian perspective on this problem is ``If there is uncertainty in model specification, let's integrate it out!'' 
-%Specifically, for a given model, we treat each model parameter as a random variable and average inferences over the prior probability density for that parameter to accommodate for uncertainty in the parameters. 
-%The idea here is to treat the MODEL as a random variable, and average estimates over the expanse of model space, while simultaneously averaging over prior probability densities for each parameter of each model.
-%Because different models may differ in the number of free parameters, this entails changes in the dimensionality of parameter space, which is accommodated by using a trans-dimensional MCMC algorithm that jumps between dimensions in model space. 
-%The proportion of time that the RJ MCMC visits a given model is an approximation of the posterior probability of that model.
-%%%%Bayesian model averaging has been implemented for various phylogenetic problems using reversible-jump MCMC, where the chain integrates over the joint prior probability density of a given model in the usual manner, but also `jumps' between models, visiting each model in proportion to its marginal probability.%For example, rjMCMC has been used to average over the pool of $203$ substitution models corresponding to all possible combinations of the six exchangeability parameters \citep{huelsenbeck04}.%Analyses of empirical datasets demonstrate that the credible set typically contains many substitution models.%Moreover, accommodating this source of uncertainty has been shown to impact parameters of interest, providing less biased estimates of the topological variance and corresponding clade probabilities \citep {huelsenbeck04}.%Similar results have been shown for methods that average over relaxed-clock models \citep{li10}:
-%typically, many relaxed-clock model have considerable marginal posterior probability ({\it i.e.}, the credible set of models contains several models), and averaging over models results in better estimates of uncertainty in divergence-time estimates \citep{li10}
-%We will demonstrate how to accommodate model uncertainty using \RevBayes~in a separate tutorial, RB\_ModelAveraging\_Tutorial.
-
-
-
-%
-%\newpage
-%\begin{Form}
-%\begin{table}[h]
-%\centering
-%\caption{\small Marginal likelihoods for various substitution models estimated using \MrBayes.}
-%\begin{tabular}{l c c c c c c}
-%\hline
-%\multicolumn{1}{l}{\textbf{ }} &\multicolumn{1}{r}{\textbf{ }} & \multicolumn{5}{c}{\textbf{Marginal lnL estimates}} \\ 
-%\cline{3-7}
-%\multicolumn{1}{l}{\textbf{Substitution Model}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textbf{run 1}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textbf{run 2}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textbf{mean}} \\ 
-%\hline
-%JC ($M_1$) & \hspace{15mm} 					&-15839.35  		& \hspace{3mm} & -15838.77  		& \hspace{3mm} & -15839.02\\
-%\hline
-%F81 ($M_2$) & \hspace{15mm} 				& -15459.19   		& \hspace{3mm} & -15459.16 			& \hspace{3mm} &  -15459.17\\
-%\hline
-%HKY ($M_3$) & \hspace{15mm} 				&  -14821.19 		& \hspace{3mm} &  -14821.48  		& \hspace{3mm} & -14821.32 \\
-%\hline
-%GTR ($M_4$) & \hspace{15mm} 				& -14572.03  		& \hspace{3mm} &  -14572.64   		& \hspace{3mm} &  -14572.29\\
-%\hline
-%GTR+$\Gamma$ ($M_5$) & \hspace{15mm} 		& -13241.33  		& \hspace{3mm} & -13241.78   		& \hspace{3mm} & -13241.53 \\
-%\hline
-%GTR+I ($M_6$)  & \hspace{15mm} 				&-13472.73  		& \hspace{3mm} & -13472.79   		& \hspace{3mm} &  -13472.76\\
-%\hline
-%GTR+$\Gamma$+I ($M_7$) & \hspace{15mm} 	& -13184.67 		& \hspace{3mm} & -13184.18  		& \hspace{3mm} & -13184.40 \\
-%\hline
-%\hline
-%{\footnotesize{$^*$you can edit this table}}\\
-%\end{tabular}
-%\label{tab:ml_cytb}
-%\end{table}
-%\end{Form}
-%
-%\begin{Form}
-%\begin{table}[h]
-%\centering
-%\caption{\small Marginal likelihoods for various substitution models estimated using \RevBayes.}
-%\begin{tabular}{l c c c c c c}
-%\hline
-%\multicolumn{1}{l}{\textbf{ }} &\multicolumn{1}{r}{\textbf{ }} & \multicolumn{5}{c}{\textbf{Marginal lnL estimates}} \\ 
-%\cline{3-7}
-%\multicolumn{1}{l}{\textbf{Substitution Model}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textbf{run 1}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textbf{run 2}} & \multicolumn{1}{r}{\hspace{3mm}} & \multicolumn{1}{c}{\textbf{mean}} \\ 
-%\hline
-%JC ($M_1$) & \hspace{15mm} 					& -15855.6  		& \hspace{3mm} & -15855.5  		& \hspace{3mm} & -15855.55\\
-%\hline
-%F81 ($M_2$) & \hspace{15mm} 				& -15475.6   		& \hspace{3mm} & -15475.7 			& \hspace{3mm} &  --15475.65\\
-%\hline
-%HKY ($M_3$) & \hspace{15mm} 				&  -14843.2 		& \hspace{3mm} &  -14842.7  		& \hspace{3mm} & -14842.95 \\
-%\hline
-%GTR ($M_4$) & \hspace{15mm} 				& -14585.1  		& \hspace{3mm} &  -14585.5   		& \hspace{3mm} &  -14585.3\\
-%\hline
-%GTR+$\Gamma$ ($M_5$) & \hspace{15mm} 		& -13292  		& \hspace{3mm} & -13292.5   		& \hspace{3mm} & -13292.25 \\
-%\hline
-%GTR+$\Gamma$+I ($M_6$) & \hspace{15mm} 		& -13296.3  		& \hspace{3mm} & -13296.8   		& \hspace{3mm} & -13296.55 \\
-%\hline
-%GTR+$\Gamma$+I ($M_7$) & \hspace{15mm} 	& -13294.9 		& \hspace{3mm} & -13295.1  		& \hspace{3mm} & -13295.0 \\
-%\hline
-%\hline
-%{\footnotesize{$^*$you can edit this table}}\\
-%\end{tabular}
-%\label{tab:ml_cytb}
-%\end{table}
-%\end{Form}
+Even when we have carefully assessed the relative and absolute fit of candidate models to our dataset, it may nevertheless be unwise to condition our inference on the best model.
+Imagine, for example, that there are several (possibly many) alternative models that provide a similarly good fit to our given dataset.
+In such scenarios, conditioning inference on \textit{any} single model (even the `best') ignores uncertainty in the chosen model, which will cause estimates to be biased.
+This is the issue of \emph{model uncertainty}.
+The Bayesian framework provides a natural approach for accommodating model uncertainty by means of \textit{model averaging}; we simply adopt the perspective that models (like standard parameters) are random variables, and integrate the inference over the distribution of candidate models.
+We will demonstrate how to accommodate model uncertainty using \RevBayes in a separate tutorial, RB\_ModelAveraging\_Tutorial.
 
 
 
 \bibliographystyle{sysbio}
-\bibliography{\ResourcePath refs}
-
-
+\bibliography{\GlobalResourcePath refs}
